--- a/styles/main.css
+++ b/styles/main.css
@@ -127,17 +127,17 @@
   }
 
   article {
-    h1+h2 {
+    h1 + h2 {
       margin-top: 4px !important;
     }
 
-    h1+p,
-    h2+p {
+    h1 + p,
+    h2 + p {
       margin-top: 8px !important;
     }
 
-    figure+h1,
-    p+h1 {
+    figure + h1,
+    p + h1 {
       margin-top: 48px !important;
     }
 
@@ -242,7 +242,7 @@
 
         figcaption {
           @apply pt-0 pl-5 text-left;
-          grid-column: right-sidebar
+          grid-column: right-sidebar;
         }
       }
     }
@@ -261,7 +261,6 @@
   */
 
   html {
-
     code[data-theme*=" "],
     code[data-theme*=" "] span {
       color: var(--shiki-light);
@@ -269,7 +268,6 @@
     }
 
     &.dark {
-
       code[data-theme*=" "],
       code[data-theme*=" "] span {
         color: var(--shiki-dark);
@@ -288,7 +286,7 @@
       counter-reset: line;
     }
 
-    code[data-line-numbers]>[data-line]::before {
+    code[data-line-numbers] > [data-line]::before {
       display: inline-block;
       width: 12px;
       margin-right: 2rem;
@@ -298,15 +296,15 @@
       counter-increment: line;
     }
 
-    code[data-line-numbers-max-digits="2"]>[data-line]::before {
+    code[data-line-numbers-max-digits="2"] > [data-line]::before {
       width: 1.25rem;
     }
 
-    code[data-line-numbers-max-digits="3"]>[data-line]::before {
+    code[data-line-numbers-max-digits="3"] > [data-line]::before {
       width: 1.75rem;
     }
 
-    code[data-line-numbers-max-digits="4"]>[data-line]::before {
+    code[data-line-numbers-max-digits="4"] > [data-line]::before {
       width: 2.25rem;
     }
 
