--- a/styles/main.css
+++ b/styles/main.css
@@ -24,7 +24,7 @@
   */
 
   :root {
-    --bg: var(--gray-1);
+    --bg: var(--gray-2);
     --fg: var(--gray-12);
     --muted: var(--gray-8);
     --border: var(--gray-4);
@@ -79,6 +79,12 @@
 
     a {
       @apply transition hover:underline;
+
+      &:focus,
+      &:active {
+        outline: none;
+        box-shadow: 0 0 0 0.1rem rgba(0, 0, 0, 0.2);
+      }
 
       &[target="_blank"] {
         position: relative;
