chore: delete post

--- a/styles/main.css
+++ b/styles/main.css
@@ -137,17 +137,17 @@
   }
 
   article {
-    h1 + h2 {
+    h1+h2 {
       margin-top: 4px !important;
     }
 
-    h1 + p,
-    h2 + p {
+    h1+p,
+    h2+p {
       margin-top: 8px !important;
     }
 
-    figure + h1,
-    p + h1 {
+    figure+h1,
+    p+h1 {
       margin-top: 48px !important;
     }
 
@@ -271,6 +271,7 @@
   */
 
   html {
+
     code[data-theme*=" "],
     code[data-theme*=" "] span {
       color: var(--shiki-light);
@@ -278,6 +279,7 @@
     }
 
     &.dark {
+
       code[data-theme*=" "],
       code[data-theme*=" "] span {
         color: var(--shiki-dark);
@@ -296,7 +298,7 @@
       counter-reset: line;
     }
 
-    code[data-line-numbers] > [data-line]::before {
+    code[data-line-numbers]>[data-line]::before {
       display: inline-block;
       width: 12px;
       margin-right: 2rem;
@@ -306,15 +308,15 @@
       counter-increment: line;
     }
 
-    code[data-line-numbers-max-digits="2"] > [data-line]::before {
+    code[data-line-numbers-max-digits="2"]>[data-line]::before {
       width: 1.25rem;
     }
 
-    code[data-line-numbers-max-digits="3"] > [data-line]::before {
+    code[data-line-numbers-max-digits="3"]>[data-line]::before {
       width: 1.75rem;
     }
 
-    code[data-line-numbers-max-digits="4"] > [data-line]::before {
+    code[data-line-numbers-max-digits="4"]>[data-line]::before {
       width: 2.25rem;
     }
 
@@ -349,7 +351,7 @@
       width: 100%;
       margin-top: 4px;
       border: 1px solid var(--border);
-      border-radius: var(--radius-base);
+      background: var(--gray-1);
     }
   }
 }
