--- a/styles/main.css
+++ b/styles/main.css
@@ -98,6 +98,15 @@
       }
     }
 
+    button {
+
+      &:focus,
+      &:active {
+        outline: none;
+        box-shadow: 0 0 0 0.1rem rgba(0, 0, 0, 0.2);
+      }
+    }
+
     ol {
       @apply list-decimal;
     }
