chore: update style for list items

--- a/styles/main.css
+++ b/styles/main.css
@@ -99,20 +99,11 @@
     }
 
     button {
-
       &:focus,
       &:active {
         outline: none;
         box-shadow: 0 0 0 0.1rem rgba(0, 0, 0, 0.2);
       }
-    }
-
-    ol {
-      @apply list-decimal;
-    }
-
-    ul {
-      @apply list-disc;
     }
 
     kbd {
@@ -146,17 +137,17 @@
   }
 
   article {
-    h1+h2 {
+    h1 + h2 {
       margin-top: 4px !important;
     }
 
-    h1+p,
-    h2+p {
+    h1 + p,
+    h2 + p {
       margin-top: 8px !important;
     }
 
-    figure+h1,
-    p+h1 {
+    figure + h1,
+    p + h1 {
       margin-top: 48px !important;
     }
 
@@ -177,6 +168,12 @@
 
     code {
       font-size: 0.875rem;
+    }
+
+    ul {
+      li {
+        list-style-type: "✦";
+      }
     }
 
     /*
@@ -280,7 +277,6 @@
   */
 
   html {
-
     code[data-theme*=" "],
     code[data-theme*=" "] span {
       color: var(--shiki-light);
@@ -288,7 +284,6 @@
     }
 
     &.dark {
-
       code[data-theme*=" "],
       code[data-theme*=" "] span {
         color: var(--shiki-dark);
@@ -307,7 +302,7 @@
       counter-reset: line;
     }
 
-    code[data-line-numbers]>[data-line]::before {
+    code[data-line-numbers] > [data-line]::before {
       display: inline-block;
       width: 12px;
       margin-right: 2rem;
@@ -317,15 +312,15 @@
       counter-increment: line;
     }
 
-    code[data-line-numbers-max-digits="2"]>[data-line]::before {
+    code[data-line-numbers-max-digits="2"] > [data-line]::before {
       width: 1.25rem;
     }
 
-    code[data-line-numbers-max-digits="3"]>[data-line]::before {
+    code[data-line-numbers-max-digits="3"] > [data-line]::before {
       width: 1.75rem;
     }
 
-    code[data-line-numbers-max-digits="4"]>[data-line]::before {
+    code[data-line-numbers-max-digits="4"] > [data-line]::before {
       width: 2.25rem;
     }
 
