chore: add line numbers to code block

--- a/styles/main.css
+++ b/styles/main.css
@@ -296,8 +296,8 @@
     code[data-line-numbers] > [data-line]::before {
       display: inline-block;
       width: 12px;
-      margin-right: 2rem;
-      color: gray;
+      margin-right: 1rem;
+      color: var(--gray-8);
       text-align: right;
       content: counter(line);
       counter-increment: line;
