chore: tweaking UI

--- a/styles/main.css
+++ b/styles/main.css
@@ -160,7 +160,7 @@
     }
 
     code {
-      font-size: 0.875rem;
+      font-size: 1rem;
     }
 
     ul {
@@ -340,6 +340,7 @@
       margin-top: 4px;
       border: 1px solid var(--border);
       background: var(--gray-1);
+      border-radius: 4px;
     }
   }
 }
