--- a/styles/main.css
+++ b/styles/main.css
@@ -6,10 +6,6 @@
 @import url("@radix-ui/colors/pink-alpha.css");
 @import url("@radix-ui/colors/pink-dark.css");
 @import url("@radix-ui/colors/pink-dark-alpha.css");
-@import url("@radix-ui/colors/yellow.css");
-@import url("@radix-ui/colors/yellow-alpha.css");
-@import url("@radix-ui/colors/yellow-dark.css");
-@import url("@radix-ui/colors/yellow-dark-alpha.css");
 @import url("@radix-ui/colors/black-alpha.css");
 @import url("@radix-ui/colors/white-alpha.css");
 
@@ -18,11 +14,6 @@
 @tailwind utilities;
 
 @layer base {
-  /*
-  * We are using the Radix UI Colors package to generate a set of color variables that can be used in the project.
-  * @see: https://colors.radix-ui.com/
-  */
-
   :root {
     --bg: var(--gray-2);
     --fg: var(--gray-12);
@@ -96,29 +87,12 @@
         box-shadow: 0 0 0 0.1rem rgba(0, 0, 0, 0.2);
       }
     }
-
-    kbd {
-      @apply mx-1;
-
-      display: inline-block;
-      min-width: 20px;
-      height: 20px;
-      min-height: 20px;
-      padding: 0 6px;
-      font-size: 12px;
-      line-height: 20px;
-      text-align: center;
-      background: var(--kbd-background);
-      border-radius: 4px;
-      box-shadow: 0 0 0 1px var(--kbd-border);
-    }
   }
 
   body {
     font-size: 1.125rem;
-    line-height: 1.6;
     display: grid;
-    grid-template-columns: [start] 1rem [left-sidebar] 0 [main] 1fr [right-sidebar] 0 [right-edge] 1rem [end];
+    grid-template-columns: [start] 0.75rem [left-sidebar] 0 [main] 1fr [right-sidebar] 0 [right-edge] 0.75rem [end];
 
     @media all and (min-width: 768px) {
       grid-template-columns: [start] auto [left-sidebar] 0 [main] 700px [right-sidebar] 0 [right-edge] auto [end];
@@ -130,20 +104,6 @@
   }
 
   article {
-    h1 + h2 {
-      margin-top: 4px !important;
-    }
-
-    h1 + p,
-    h2 + p {
-      margin-top: 8px !important;
-    }
-
-    figure + h1,
-    p + h1 {
-      margin-top: 48px !important;
-    }
-
     p:not(:first-child),
     h1:not(:first-child),
     h2:not(:first-child),
@@ -174,68 +134,15 @@
       }
     }
 
-    /*
-    * This handles our highlighting on selection of a table of contents item.
-    */
+    ol {
+      li {
+        list-style-type: decimal;
 
-    [data-highlight] {
-      @apply relative;
-    }
-
-    [data-highlight]::before {
-      @apply absolute inset-0 -inset-x-1 -z-10 bg-transparent transition scale-y-[1.1] content-[""] duration-500;
-    }
-
-    [data-highlight="true"]::before {
-      @apply bg-highlight-background text-highlight-foreground scale-y-110 !important;
-    }
-
-    [data-highlight="false"]::before {
-      @apply bg-transparent scale-y-100;
-    }
-
-    /* 
-    * Here we are setting up the styles for our footnotes and references.
-    */
-
-    .footnotes {
-      position: relative;
-      padding-top: 16px;
-      margin-top: 64px !important;
-      border-top: 1px solid var(--border);
-    }
-
-    .footnotes ol {
-      position: relative;
-      display: block;
-      padding: 0 0 0 4px;
-      margin-top: 16px !important;
-      list-style: none;
-    }
-
-    .footnotes li {
-      margin-top: 0 !important;
-    }
-
-    .footnotes ol li {
-      position: relative;
-      padding-top: 4px;
-      padding-left: 6px;
-      font-size: 12px;
-      color: var(--muted);
-      counter-increment: list;
-    }
-
-    .footnotes ol li::before {
-      position: absolute;
-      top: 0;
-      right: 100%;
-      font-size: 8px;
-      content: counter(list);
-    }
-
-    .footnotes ol li p a {
-      z-index: 2;
+        &::marker {
+          color: var(--gray-9);
+          font-weight: 500;
+        }
+      }
     }
 
     figure[data-mdx-image] {
@@ -248,18 +155,6 @@
       }
     }
   }
-
-  /* 
-  * We are using rehypye-pretty to style the code blocks in the project.
-  * rehype-pretty-code is a Rehype plugin powered by the shiki syntax highlighter that provides beautiful code blocks for Markdown or MDX. 
-  * It works on both the server at build-time (avoiding runtime syntax highlighting) and on the client for dynamic highlighting.
-  * @see: https://rehype-pretty.pages.dev/
-  */
-
-  /* 
-  * Here we are setting up the styles needed to enable theme-aware code blocks.
-  * @see: https://rehype-pretty.pages.dev/#multiple-themes-dark-and-light-mode
-  */
 
   html {
     code[data-theme*=" "],
@@ -277,11 +172,6 @@
     }
   }
 
-  /* 
-  * Here we are setting up the styles needed to enable line numbers in code blocks.
-  * @see: https://rehype-pretty.pages.dev/#line-numbers
-  */
-
   html {
     code[data-line-numbers] {
       counter-reset: line;
@@ -291,7 +181,7 @@
       display: inline-block;
       width: 12px;
       margin-right: 1rem;
-      color: var(--gray-8);
+      color: #6a737d;
       text-align: right;
       content: counter(line);
       counter-increment: line;
@@ -320,11 +210,6 @@
     }
   }
 
-  /* 
-  * Here we are just some additional styles to make the code blocks look better.
-  * @see: https://rehype-pretty.pages.dev/#styles
-  */
-
   * {
     pre {
       padding: 16px;
@@ -340,7 +225,8 @@
       width: 100%;
       margin-top: 4px;
       border: 1px solid var(--border);
-      background: var(--gray-1);
+      background: #24292e;
+      color: #e1e4e8;
       border-radius: 4px;
     }
   }
